gnome-desktop (2.30.2-1) UNRELEASED; urgency=low

  * New upstream stable release.
  * Switch to source format 3.0 (quilt)
    - Add debian/source/format.
    - Add debian/patches/series.
    - Remove /usr/share/cdbs/1/rules/simple-patchsys.mk from debian/rules.
    - Refresh debian/patches/99_ltmain_as-needed.patch.

 -- Michael Biebl <biebl@debian.org>  Sat, 17 Jul 2010 04:30:00 +0200

gnome-desktop (2.30.0-2) unstable; urgency=low

  * Upload to unstable.

 -- Josselin Mouette <joss@debian.org>  Mon, 26 Apr 2010 23:22:47 +0200

gnome-desktop (2.30.0-1) experimental; urgency=low

  [ Emilio Pozuelo Monfort ]
  * debian/rules:
    - Use the system pnp.ids from hwdata.
  * debian/control.in:
    - Recommend hwdata.

  [ Josselin Mouette ]
  * New upstream release.
  * Bump build-dependencies.
  * Rename runtime library package.
  * 01_check_xrandr_version.patch: dropped, merged upstream.

 -- Josselin Mouette <joss@debian.org>  Tue, 13 Apr 2010 21:05:05 +0200

gnome-desktop (2.28.2-1) unstable; urgency=low

  [ Josselin Mouette ]
  * Fix typo in description. Closes: #557400.

  [ Emilio Pozuelo Monfort ]
  * New upstream release.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Fri, 18 Dec 2009 16:14:17 +0100

gnome-desktop (2.28.1-3) unstable; urgency=low

  * 01_trap_rr_x_errors.patch: dropped, this solution is fugly.
  * 01_check_xrandr_version.patch: check that the extension is available 
    at version 1.2 before running code that requires version 1.2 anyway.

 -- Josselin Mouette <joss@debian.org>  Sat, 21 Nov 2009 10:38:16 +0100

gnome-desktop (2.28.1-2) unstable; urgency=low

  * Switch to python-support.
  * 01_trap_rr_x_errors.patch: patch from Chris Coulson to support 
    FreeNX, it fixes some BadRequest errors. Closes: #556797.

 -- Josselin Mouette <joss@debian.org>  Wed, 18 Nov 2009 09:16:11 +0100

gnome-desktop (2.28.1-1) unstable; urgency=low

  * New upstream release.
  * debian/control.in: